src/objects/User.object
<CustomObject>
    <fields>
        <fullName>AMP_Digest_Daily_or_Weekly__c</fullName>
        <description>option to receive the Chatter topic digest either daily or weekly</description>
        <label>AMP Digest Daily or Weekly</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMP_Digest_Topics__c</fullName>
        <description>A csv list of the topics the user wants an email digest on, for AMP</description>
        <label>AMP Digest Topics</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ANG_Accreditation_Model__c</fullName>
        <formula>TEXT(Contact.Account.ANG_Accreditation_Model__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accreditation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANG_Category__c</fullName>
        <formula>TEXT(Contact.Account.Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANG_Customer_Country_ISO__c</fullName>
        <description>2-letter ISO Code of the IATA ISO Country related to the contact’s Account (Agency)</description>
        <formula>Contact.Account.Country_ISO_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Country ISO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANG_Is_Accredited_Agent__c</fullName>
        <description>Determine if the Agency is accredited</description>
        <formula>AND( 
Contact.Account.RecordType.Name=&apos;Agency&apos;,
OR(
ISPICKVAL(Contact.Account.Status__c, &apos;Approved&apos;),
ISPICKVAL(Contact.Account.Status__c, &apos;Changes processed&apos;),
ISPICKVAL(Contact.Account.Status__c, &apos;Listed&apos;) 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Accredited Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ANG_Sector__c</fullName>
        <description>Sector for the contact’s Agency</description>
        <formula>TEXT(Contact.Account.Sector__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sector</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Air_Transport_Expertise__c</fullName>
        <label>Air Transport Expertise</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aircraft Recovery</fullName>
                </value>
                <value>
                    <fullName>Air Navigation Services</fullName>
                </value>
                <value>
                    <fullName>Airport Development</fullName>
                </value>
                <value>
                    <fullName>Airport Operations</fullName>
                </value>
                <value>
                    <fullName>Airport Services</fullName>
                </value>
                <value>
                    <fullName>Cargo Operations</fullName>
                </value>
                <value>
                    <fullName>Cargo Services</fullName>
                </value>
                <value>
                    <fullName>Dangerous Goods</fullName>
                </value>
                <value>
                    <fullName>Econometrics</fullName>
                </value>
                <value>
                    <fullName>Engineering and Maintenance</fullName>
                </value>
                <value>
                    <fullName>Environment</fullName>
                </value>
                <value>
                    <fullName>Facilitation</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Fleet Planning</fullName>
                </value>
                <value>
                    <fullName>Flight Operations</fullName>
                </value>
                <value>
                    <fullName>Flight Simulation</fullName>
                </value>
                <value>
                    <fullName>Fuel Services</fullName>
                </value>
                <value>
                    <fullName>Government Relations</fullName>
                </value>
                <value>
                    <fullName>Ground Handling</fullName>
                </value>
                <value>
                    <fullName>Industry Taxation</fullName>
                </value>
                <value>
                    <fullName>InFlight Services</fullName>
                </value>
                <value>
                    <fullName>Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Interline Tariffs</fullName>
                </value>
                <value>
                    <fullName>Live Animal Regulations</fullName>
                </value>
                <value>
                    <fullName>Meteorological</fullName>
                </value>
                <value>
                    <fullName>Navigation Services</fullName>
                </value>
                <value>
                    <fullName>Passenger Operations</fullName>
                </value>
                <value>
                    <fullName>Passenger Services</fullName>
                </value>
                <value>
                    <fullName>Ramp Services</fullName>
                </value>
                <value>
                    <fullName>Revenue Accounting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area_PPD__c</fullName>
        <description>Area 1, 2 or 3 coming from the AD records</description>
        <label>Area (PPD)</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <description>Area in which user works:  Americas, AsiaPac, EMEA</description>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alternate Channels</fullName>
                </value>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>AsiaPac</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>MEA</fullName>
                </value>
                <value>
                    <fullName>North Asia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ByPassValidationRule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ByPassValidationRule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CNS_Account_or_Agency__c</fullName>
        <formula>AND (
  OR( Contact.Account.CNS_Account__c , Contact.Account.CNS_Agency__c),
  OR( Contact.Account.RecordType.DeveloperName =&apos;IATA_Agency&apos;, Contact.Account.RecordType.DeveloperName =&apos;Standard_Account&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CNS Account or Agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>For admin use. Reason for deactivation or reactivation between other comments another admin may need to know before doing any modification.</description>
        <label>Comments</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <label>Community</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactKaviId__c</fullName>
        <label>ContactKaviId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contact_Account_Country__c</fullName>
        <formula>Contact.Account.IATA_ISO_Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Account Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Account_Designator_Code__c</fullName>
        <formula>Contact.Account.Airline_designator__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Account Designator Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Account_IATA_Code__c</fullName>
        <formula>Contact.Account.IATACode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Account IATA Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Account_Name__c</fullName>
        <formula>Contact.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Account_Record_Type__c</fullName>
        <formula>Contact.Account.RecordType.DeveloperName</formula>
        <label>Contact Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Account_Region__c</fullName>
        <formula>TEXT(Contact.Account.IATA_ISO_Country__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Unique_Id__c</fullName>
        <label>Contact Unique Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_type__c</fullName>
        <formula>CASE(Contact.Account.RecordType.Name, 
   &quot;Agency&quot;, If( OR(Contact.Account.CNS_Account__c, Contact.Account.CNS_Agency__c),&quot;CNS Agency&quot;, &quot;Agency&quot;),
   &quot;Airline Branch&quot;, &quot;Airline&quot;,
   &quot;Airline Headquarters&quot;, &quot;Airline&quot;,
   &quot;General Sales Agent Branch&quot;,IF(ISBLANK(Contact.Account.IATACode__c), &quot;GSA&quot;, &quot;GSSA&quot;),
   &quot;General Sales Agent Headquarters&quot;, IF(ISBLANK(Contact.Account.IATACode__c), &quot;GSA&quot;, &quot;GSSA&quot;),
   &quot;Other&quot;)+
If( Contact.Account.ICH_Member__c = true,&quot;ICH&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Data_Scout_Profile__c</fullName>
        <description>Cloud Customer 360: enter the name of the Cloud Customer 360 profile for this user. If no Cloud Customer 360 Profile is specified, the default profile will be used</description>
        <inlineHelpText>Cloud Customer 360: enter the name of the Cloud Customer 360 profile for this user. If no Cloud Customer 360 Profile is specified, the default profile will be used</inlineHelpText>
        <label>Cloud Customer 360 Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_ToU_accepted__c</fullName>
        <description>Date on which the Terms of Use were  accepted.</description>
        <inlineHelpText>Date on which the Terms of Use were  accepted.</inlineHelpText>
        <label>Date_ToU_accepted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EF_Billing_Agreement_Approver_Email__c</fullName>
        <formula>EF_Billing_Agreement_Approver__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EF Billing Agreement Approver Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EF_Billing_Agreement_Approver__c</fullName>
        <label>E&amp;F Billing Agreement Approver</label>
        <relationshipName>EF_BA_Listing</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>EF_Client_Reactivation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>EF CRM. Sets the right to change Client Account E&amp;F Status from Inactive to Active</description>
        <inlineHelpText>EF CRM. Sets the right to change Client Account E&amp;F Status from Inactive to Active</inlineHelpText>
        <label>E&amp;F Client Reactivation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EF_Contract_Approver_Email__c</fullName>
        <formula>EF_Contract_Approver__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EF Contract Approver Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EF_Contract_Approver__c</fullName>
        <label>E&amp;F Contract Approver</label>
        <relationshipName>EF_Contract_Listing</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>EF_Customer_Reactivation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>EF CRM. Sets the right to change E&amp;F Status from Inactive to Active</description>
        <inlineHelpText>EF CRM. Sets the right to change E&amp;F Status from Inactive to Active</inlineHelpText>
        <label>E&amp;F Customer Reactivation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EF_User_Role__c</fullName>
        <label>E&amp;F User Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>EF_User_Role</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmailForSSO__c</fullName>
        <description>This is a copy of the standard email field. Required for the connected app configuration.</description>
        <formula>Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EmailForSSO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Number_PPD__c</fullName>
        <description>IATA Employee Number</description>
        <label>Employee Number (PPD)</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FedContactId__c</fullName>
        <formula>ContactId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FedContactId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federation_ID__c</fullName>
        <description>Shows the federation Id to the permission set manage external users</description>
        <formula>FederationIdentifier</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Federation ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functional_Expertise__c</fullName>
        <label>Functional Expertise</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Branding</fullName>
                </value>
                <value>
                    <fullName>Business Analysis</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Business Intelligence</fullName>
                </value>
                <value>
                    <fullName>Business Operations</fullName>
                </value>
                <value>
                    <fullName>Channel Management</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Consultancy</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Graphics</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>People Management</fullName>
                </value>
                <value>
                    <fullName>Printing</fullName>
                </value>
                <value>
                    <fullName>Product Management</fullName>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Sourcing</fullName>
                </value>
                <value>
                    <fullName>Telesales</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IDFS_Region__c</fullName>
        <label>IDFS Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Africa &amp; MENA</fullName>
                </value>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>Asia &amp;  Pacific</fullName>
                </value>
                <value>
                    <fullName>China &amp; North Asia</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IFAP_Close_from_any_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked will bypass all the business rules in validation rule &quot;IFAP_Case_Closure&quot;</description>
        <label>IFAP Close from any Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IFG_Account_Member__c</fullName>
        <formula>Contact.Account.IFG_Member__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IFG Account Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISSP_Contact_Language__c</fullName>
        <formula>TEXT(Contact.Preferred_Language__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISSP Contact Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISSP_Old_Email__c</fullName>
        <label>ISSP Old Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Is_Account_s_sector_General_Public__c</fullName>
        <formula>IF( ISNULL(ContactId), false,  TEXT(Contact.Account.Sector__c) == &apos;General Public&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Account&apos;s sector General Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_General_Public_User__c</fullName>
        <description>Field is checked if the User&apos;s account is a General Public Account</description>
        <formula>IF( ISNULL(ContactId), false, Contact.Account.Is_General_Public_Account__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is General Public User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Kavi_Internal_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Kavi Internal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_TIP_User__c</fullName>
        <formula>ISPICKVAL(Contact.Account.Category__c, &apos;Payment Provider&apos;)
&amp;&amp; ISPICKVAL(Contact.Account.Sector__c , &apos;Financial Institution&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is TIP User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOB_Expertise__c</fullName>
        <label>LOB Expertise</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Audit</fullName>
                </value>
                <value>
                    <fullName>Business Intelligence</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Distribution &amp; Financial Services</fullName>
                </value>
                <value>
                    <fullName>Environment</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Facillitation</fullName>
                </value>
                <value>
                    <fullName>Fuel</fullName>
                </value>
                <value>
                    <fullName>Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Member Relations</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Promotional</fullName>
                </value>
                <value>
                    <fullName>Publishing</fullName>
                </value>
                <value>
                    <fullName>Regulatory Services</fullName>
                </value>
                <value>
                    <fullName>Safety</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Standards Development</fullName>
                </value>
                <value>
                    <fullName>Tariff Expertise</fullName>
                </value>
                <value>
                    <fullName>Taxation</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>User Charges</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVA_Language_Skills__c</fullName>
        <description>Agent&apos;s languages to display on Live Agent Chat</description>
        <label>Spoken Languages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Albanian</fullName>
                </value>
                <value>
                    <fullName>ar</fullName>
                    <label>Arabic</label>
                </value>
                <value>
                    <fullName>Azerbaycani</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Burmese</fullName>
                </value>
                <value>
                    <fullName>zh_CN</fullName>
                    <label>Chinese</label>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Dari</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>en_US</fullName>
                    <label>English</label>
                </value>
                <value>
                    <fullName>Filipino</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>fr</fullName>
                    <label>French</label>
                </value>
                <value>
                    <fullName>de</fullName>
                    <label>German</label>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Gujarati</fullName>
                </value>
                <value>
                    <fullName>Hebrew</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>in</fullName>
                    <label>Indonesian</label>
                </value>
                <value>
                    <fullName>it</fullName>
                    <label>Italian</label>
                </value>
                <value>
                    <fullName>ja</fullName>
                    <label>Japanese</label>
                </value>
                <value>
                    <fullName>Kannada</fullName>
                </value>
                <value>
                    <fullName>Ko</fullName>
                    <label>Korean</label>
                </value>
                <value>
                    <fullName>Kurdish</fullName>
                </value>
                <value>
                    <fullName>Malay</fullName>
                </value>
                <value>
                    <fullName>Marathi</fullName>
                </value>
                <value>
                    <fullName>Nepali</fullName>
                </value>
                <value>
                    <fullName>Odia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVA_Show_photo_on_chat__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show photo on chat</description>
        <label>Show photo on chat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Cost_Center__c</fullName>
        <inlineHelpText>The IATA cost center that is paying for your Salesforce.com license.</inlineHelpText>
        <label>License Cost Center</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_name__c</fullName>
        <formula>Profile.UserLicense.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Business_unit__c</fullName>
        <formula>HYPERLINK(&quot;https://emea.salesforce.com/a07?fcf=00B20000005GDh6&quot;, &quot;Link to business unit&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to Business unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIR_User__c</fullName>
        <formula>IF ( Contact.MIR_User__c == 1 , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MIR User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mgmt_Report_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mgmt Report Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OdigoCti__Odigo_Conf__c</fullName>
        <label>Odigo Conf</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OdigoCti__Odigo_login__c</fullName>
        <description>Login Odigo</description>
        <label>Odigo login</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Office_Location__c</fullName>
        <label>Office Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABJ</fullName>
                </value>
                <value>
                    <fullName>ADD</fullName>
                </value>
                <value>
                    <fullName>AKL</fullName>
                </value>
                <value>
                    <fullName>Alternate</fullName>
                </value>
                <value>
                    <fullName>AMD</fullName>
                </value>
                <value>
                    <fullName>AMM</fullName>
                </value>
                <value>
                    <fullName>AMS</fullName>
                </value>
                <value>
                    <fullName>ATH</fullName>
                </value>
                <value>
                    <fullName>BEG</fullName>
                </value>
                <value>
                    <fullName>BEY</fullName>
                </value>
                <value>
                    <fullName>BJS</fullName>
                </value>
                <value>
                    <fullName>BKK</fullName>
                </value>
                <value>
                    <fullName>BLR</fullName>
                </value>
                <value>
                    <fullName>BOG</fullName>
                </value>
                <value>
                    <fullName>BOM</fullName>
                </value>
                <value>
                    <fullName>BRU</fullName>
                </value>
                <value>
                    <fullName>BUD</fullName>
                </value>
                <value>
                    <fullName>BUE</fullName>
                </value>
                <value>
                    <fullName>BUH</fullName>
                </value>
                <value>
                    <fullName>CAI</fullName>
                </value>
                <value>
                    <fullName>CAS</fullName>
                </value>
                <value>
                    <fullName>CCS</fullName>
                </value>
                <value>
                    <fullName>CCU</fullName>
                </value>
                <value>
                    <fullName>CNS</fullName>
                </value>
                <value>
                    <fullName>COK</fullName>
                </value>
                <value>
                    <fullName>DAR</fullName>
                </value>
                <value>
                    <fullName>DEL</fullName>
                </value>
                <value>
                    <fullName>DUB</fullName>
                </value>
                <value>
                    <fullName>FRA</fullName>
                </value>
                <value>
                    <fullName>GUA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PPD_Country__c</fullName>
        <description>Field to be populated based on the information hosted in AD which is updated by Zebra (the PPD system)</description>
        <label>Country (PPD)</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPD_Department__c</fullName>
        <description>Field to be populated based on the information hosted in AD which is updated by Zebra (the PPD system)</description>
        <label>Department (PPD)</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPD_Division__c</fullName>
        <description>Field to be populated based on the information hosted in AD which is updated by Zebra (the PPD system)</description>
        <label>Division (PPD)</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPD_Office__c</fullName>
        <description>Field to be populated based on the information hosted in AD which is updated by Zebra (the PPD system)</description>
        <label>Office (PPD)</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPD_Tittle__c</fullName>
        <description>Field to be populated based on the information hosted in AD which is updated by Zebra (the PPD system)</description>
        <label>Tittle (PPD)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>